Added ESG Chatbot for .pdf reports (experimental)
Using Langchain and pdfplumber, the user can now upload a .pdf file of a report. The report is vectorized using OpenAI's Ada v2 embedding model, which is then given to a GPT QA session in which the user can ask relevant questions about the document.

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,11 +5,12 @@ yfinance
 plotly
 numpy
 scikit-learn
-tensorflow
-keras-tuner
 transformers
 nltk
 newspaper3k
 newsapi
-PyPDF2
 pdfplumber
+chromadb
+langchain[llms]
+pathlib
+uuid
